--- a/azure-spring-boot-samples/azure-active-directory-b2c-oidc-spring-boot-sample/pom.xml
+++ b/azure-spring-boot-samples/azure-active-directory-b2c-oidc-spring-boot-sample/pom.xml
@@ -25,6 +25,7 @@
         <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-active-directory-b2c-spring-boot-starter</artifactId>
+            <version>2.1.6.M2</version>
         </dependency>
 
         <dependency>
