--- a/azure-spring-boot-samples/azure-active-directory-b2c-oidc-spring-boot-sample/src/main/resources/application.yml
+++ b/azure-spring-boot-samples/azure-active-directory-b2c-oidc-spring-boot-sample/src/main/resources/application.yml
@@ -1,13 +1,15 @@
 azure:
   activedirectory:
     b2c:
-      tenant: ${your-tenant-name}
+      tenant: sophosdev
       oidc-enabled: true
-      client-id: ${your-client-id}
-      client-secret: ${your-client-secret}
-      reply-url: ${your-reply-url-from-aad} # should be absolute url.
-      logout-success-url: ${you-logout-success-url}
+      client-id: c542509b-b513-4589-8433-1039b325e013
+      client-secret: 'you client secret'
+      reply-url: http://localhost:131/home # should be absolute url.
+      logout-success-url: http://localhost:131/logout
       user-flows:
-        sign-up-or-sign-in: ${your-sign-up-or-in-user-flow}
-        profile-edit: ${your-profile-edit-user-flow}     # optional
-        password-reset: ${your-password-reset-user-flow} # optional
+        sign-up-or-sign-in: B2C_1_phoenix_signin_signup_workflow
+        #profile-edit: B2C_1_test_profile_edit     # optional
+        #password-reset: ${your-password-reset-user-flow} # optional
+server:
+  port: 131
