--- a/azure-spring-boot-samples/azure-active-directory-spring-boot-sample/pom.xml
+++ b/azure-spring-boot-samples/azure-active-directory-spring-boot-sample/pom.xml
@@ -18,9 +18,11 @@
     <url>https://github.com/Microsoft/azure-spring-boot</url>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.microsoft.azure/azure-active-directory-spring-boot-starter -->
         <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-active-directory-spring-boot-starter</artifactId>
+            <version>2.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
